Internal engine plan, plugin, and testar refactors